--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{missbach2018makassar,
+  title={Is Makassar a ‘sanctuary city’? Migration governance in Indonesia after the ‘local turn’},
+  author={Missbach, Antje and Adiputera, Yunizar and Prabandari, Atin},
+  journal={Austrian Journal of South-East Asian Studies},
+  volume={11},
+  number={2},
+  pages={199--216},
+  year={2018}
 }
