--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,8 +1,7 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@inproceedings{isa22,
+  title={The Role of Democratic Reputation in Shaping State Response to Separatist Movements},
+  author={Adiputera, Yunizar},
+  booktitle={International Studies Association Annual Convention},
+  year={2022},
+  organization={ISA}
 }
